solve a bug of the scrollbar does not match when some context item expand

--- a/styles.css
+++ b/styles.css
@@ -198,7 +198,7 @@ body {
 }
 
 .nav-category.expanded .nav-submenu {
-    max-height: 500px;
+    max-height: 2000px;
 }
 
 .nav-submenu li {
